[bdist_wheel]
universal = 1

[flake8]
ignore =
    E116,E121,E122,E123,E124,E125,E126,E127,E128,E131,
    E201,E202,E203,E211,E221,E222,E225,E226,E228,E241,E251,E231,
    E261,E262,E265,E266,E271,
    E301,E302,E303,E305,
    E501,E502,
    E701,E703,E711,E722,
    F401,F403,F405,F821,F841

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
known_first_party = xlwt
multi_line_output = 5
not_skip = __init__.py
skip = .tox

[metadata]
license_file = LICENSE
